Use the result of librsvg's parser to generate pixel data out of SVGs

Resolves problems with converting SVGs that use relative paths.
Also avoids the duplicate SVG parsing by gdk-pixbuf's SVG loader.
It's not the nicest code, but we need to split EogImage in
format-specific variants anyway. So, this can stay like this until then.

https://bugzilla.gnome.org/show_bug.cgi?id=642725